[package]
name = "native-utils"
version = "0.1.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "0.8"
secp256k1 = "0.20"
primitive-types = "0.8"
rustc-hex = "2.1"
faster-hex = "0.5"
firestorm = "0.4.5"


[build-dependencies]
neon-build = "0.8.0"