[package]
name = "neon-utils"
version = "1.1.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A collection of utilities for use with neon-bindings"
categories = ["web-programming", "external-ffi-bindings", "asynchronous"]
keywords = ["neon", "node"]


[dependencies]
neon = "0.10"
secp256k1 = { version = "0.27", features=["recovery"] }
primitive-types = "0.12.1"
rustc-hex = "2.1"
faster-hex = "0.8"
firestorm = "0.5.1"
atomic-take = "1.0"
never = "0.1.0"

[build-dependencies]
neon-build = "0.10"
